--- a/style.css
+++ b/style.css
@@ -2,19 +2,26 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'josefin sans', sans-serif;
+    box-sizing: border-box;
 }
 
 .container {
     background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, .7)), url(./images/bg-img.jpg);
-    height: 100vh;
+    height: 100%;
     font-family: 'josefin sans', sans-serif;
     border-bottom: 10px solid rgb(98, 92, 92);
+    padding-bottom: 50px;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     padding: 20px 40px;
+    flex-wrap: nowrap;
+}
+
+.logo {
+    padding: auto;
 }
 
 .nav-button {
@@ -56,7 +63,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 0 50px 0;
+    flex-wrap: wrap;
 }
 
 .heading {
@@ -115,6 +122,7 @@ body {
     align-items: center;
     height: 80vh;
     border-bottom: 10px solid rgb(98, 92, 92);
+    position: relative;
 }
 
 .second-heading {
@@ -132,14 +140,14 @@ body {
 
 .tv-img {
     width: 500px;
-    position: relative;
 }
 
 .video-tv {
     width: 365px;
     position: absolute;
-    top: 606px;
-    left: 592px;
+    top: 225px;
+    left: 555px;
+    ;
 }
 
 .third-content {
