--- a/style.css
+++ b/style.css
@@ -1,322 +1,400 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'josefin sans', sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "josefin sans", sans-serif;
+  box-sizing: border-box;
 }
 
 .container {
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, .7)), url(./images/bg-img.jpg);
-    height: 100%;
-    font-family: 'josefin sans', sans-serif;
-    border-bottom: 10px solid rgb(98, 92, 92);
-    padding-bottom: 50px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)),
+    url(https://assets.nflxext.com/ffe/siteui/vlv3/ab180a27-b661-44d7-a6d9-940cb32f2f4a/7fb62e44-31fd-4e1f-b6ad-0b5c8c2a20ef/IN-en-20231009-popsignuptwoweeks-perspective_alpha_website_large.jpg);
+  height: 80vh;
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-family: "josefin sans", sans-serif;
+  border-bottom: 10px solid rgb(98, 92, 92);
+  padding-bottom: 50px;
+  overflow: hidden;
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 40px;
-    flex-wrap: nowrap;
+  display: flex;
+  justify-content: space-between;
+  padding: 24px 48px;
+  width: 100vw;
+  max-width: 75rem;
+  flex-wrap: nowrap;
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
 
 .logo {
-    padding: auto;
+  /* padding: auto; */
+  height: 40px;
+  width: 148px;
 }
 
 .nav-button {
-    border: none;
-    width: 75px;
-    height: 30px;
-    background-color: #e50914;
-    color: #fff;
-    font-size: 14px;
-    cursor: pointer;
-    outline: none;
-    border-radius: 2.5px;
-    margin-right: 10px;
-    text-align: center;
+  border: none;
+  width: 75px;
+  height: 30px;
+  background-color: #e50914;
+  color: #fff;
+  font-size: 14px;
+  cursor: pointer;
+  outline: none;
+  border-radius: 2.5px;
+  margin-right: 10px;
+  text-align: center;
 }
 
 .language {
-    text-align: center;
-    width: 90px;
-    height: 30px;
-    border: 1px solid #fff;
-    background-color: transparent;
-    color: #fff;
-    font-size: 15px;
-    cursor: pointer;
-    outline: none;
-    border-radius: 2.5px;
+  text-align: center;
+  width: 90px;
+  height: 30px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+  outline: none;
+  border-radius: 2.5px;
 }
 
 .value {
-    color: black;
-    cursor: pointer;
-    text-align: center;
-    background-color: rgb(184, 168, 168);
-    outline: none;
+  color: black;
+  cursor: pointer;
+  text-align: center;
+  background-color: rgb(184, 168, 168);
+  outline: none;
 }
 
 .main-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .heading {
-    color: #fff;
-    text-align: center;
-    font-size: 3rem;
-    margin-bottom: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 50px;
+  font-weight: bolder;
+  margin-bottom: 0;
 }
 
 .heading-2 {
-    color: #fff;
-    text-align: center;
-    font-size: 26px;
-    letter-spacing: .5px;
+  color: #fff;
+  text-align: center;
+  font-size: 26px;
+  letter-spacing: 0.5px;
 }
 
 .paragraph {
-    font-size: 19px;
-    color: #fff;
-    text-align: center;
+  font-size: 19px;
+  color: #fff;
+  text-align: center;
+}
+
+.email-div {
+  display: flex;
+  justify-content: center;
 }
 
 .email {
-    width: 300px;
-    height: 50px;
-    background-color: #fff;
-    color: black;
-    font-size: 15px;
-    outline: none;
-    border: none;
-    margin-right: 0;
-    padding-right: 0;
-    text-align: left;
-    margin-left: 68px;
+  width: 100vw;
+  max-width: 400px;
+  height: 100%;
+  background-color: #1a1a1b;
+  opacity: 70%;
+  color: white;
+  font-size: 15px;
+  outline: none;
+  border: 1px solid #fff;
+  padding: 15px 20px;
+  border-radius: 5px 0 0 5px;
+  margin-right: 0;
+  text-align: left;
+  margin-left: 68px;
 }
 
 .email-btn {
-    width: 150px;
-    height: 51px;
-    background-color: #e50914;
-    color: #fff;
-    cursor: pointer;
-    font-size: 15px;
-    font-weight: 300;
-    border: none;
-    outline: none;
-    margin-left: 0;
-    padding-left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #e50914;
+  color: #fff;
+  cursor: pointer;
+  font-size: 17px;
+  font-weight: 300;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  outline: none;
+  margin-left: 0;
+  padding: 15px 20px;
 }
 
 .second-content {
-    background-color: #000;
-    margin: 0px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 80vh;
-    border-bottom: 10px solid rgb(98, 92, 92);
-    position: relative;
+  padding: 0 6rem;
+  background-color: #000;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80vh;
+  border-bottom: 10px solid rgb(98, 92, 92);
 }
 
 .second-heading {
-    color: #fff;
-    font-family: 'josefin sans', sans-serif;
-    font-size: 3rem;
+  color: #fff;
+  font-size: 3rem;
 }
 
 .heading-3 {
-    color: #fff;
-    font-family: 'josefin sans', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 300;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 300;
 }
-
+.tv {
+  position: relative;
+  display: inline-block;
+}
 .tv-img {
-    width: 500px;
+  width: 70%;
+  /* height: auto; */
+  position: block;
 }
 
 .video-tv {
-    width: 365px;
-    position: absolute;
-    top: 225px;
-    left: 555px;
-    ;
+  width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* height: 100%; */
 }
 
 .third-content {
-    background-color: black;
-    margin: 0px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 80vh;
-    border-bottom: 10px solid rgb(98, 92, 92);
+  background-color: black;
+  margin: 0px auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 80vh;
+  border-bottom: 10px solid rgb(98, 92, 92);
+  position: relative;
 }
 
 .section-2 {
-    padding: 70px 45px;
+  padding: 70px 45px;
 }
 
 .phone-img {
-    width: 430px;
+  width: 430px;
+  position: relative;
 }
 
-/* .story-card-wrapper {
-    width: 100px;
-    box-sizing: border-box;
-    height: 60px;
+.story-card-wrapper{
+    width: 300px;
+    height: 85px;
+    position: absolute;
+    display: flex;
+    align-items: center;
     background-color: #000;
-    border: 1px solid rgb(98, 92, 92);
-    border-radius: 5px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  border: 2px solid #303030;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.story-card-image {
-    width: 50px;
-    height: 10px;
-} */
+.phone-img-2 {
+  width: 4rem;
+  height: 5rem;
+  object-fit: contain;
+}
+
+.story-card {
+  width: 200px;
+  padding: 10px;
+
+}
+
+.story-card-paragraphn-1 {
+  font-size: 16px;
+  color: #fff;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+.story-card-paragraphn-2 {
+  font-size: 14px;
+  color: #0071eb;
+  letter-spacing: 0.5px;
+}
+
+.story-card-anim{
+    background: url(https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif) center no-repeat;
+    background-size: contain;
+    height: 3rem;
+    width: 3rem;
+}
 
 .fourth-content {
-    background-color: black;
-    margin: 0px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 80vh;
-    border-bottom: 10px solid rgb(98, 92, 92);
+  background-color: black;
+  margin: 0px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 80vh;
+  border-bottom: 10px solid rgb(98, 92, 92);
 }
 
 .tv-img-2 {
-    width: 500px;
-    position: relative;
+  width: 500px;
+  position: relative;
 }
 
 .video-tv-2 {
-    position: absolute;
-    width: 320px;
-    left: 612px;
-    top: 1396px;
+  position: absolute;
+  width: 320px;
+  left: 612px;
+  top: 1396px;
 }
 
 .tv-img-two {
-    width: 500px;
-    position: absolute;
-    left: 525px;
+  width: 500px;
+  position: absolute;
+  left: 525px;
 }
 
 .fifth-content {
-    background-color: #000;
-    margin: 0px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 80vh;
-    border-bottom: 10px solid rgb(98, 92, 92);
+  background-color: #000;
+  margin: 0px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 80vh;
+  border-bottom: 10px solid rgb(98, 92, 92);
 }
 
 .section-5-img {
-    width: 480px;
-    text-align: left;
+  width: 480px;
+  text-align: left;
 }
 
 .sixth-content {
-    background-color: #000;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-bottom: 90px;
-    align-items: center;
-    margin: 0;
-    border-bottom: 10px solid rgb(98, 92, 92);
+  background-color: #000;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 90px;
+  align-items: center;
+  margin: 0;
+  border-bottom: 10px solid rgb(98, 92, 92);
 }
 
 .questions {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 20px 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px 100px;
 }
 
 .accordion {
-    background-color: #303030;
-    color: #fff;
-    cursor: pointer;
-    padding: 18px;
-    width: 900px;
-    text-align: left;
-    font-size: 25px;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-    position: relative;
-    margin-top: 5px;
+  background-color: #303030;
+  color: #fff;
+  cursor: pointer;
+  padding: 18px;
+  width: 900px;
+  text-align: left;
+  font-size: 25px;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  position: relative;
+  margin-top: 5px;
 }
 
 .fas {
-    position: absolute;
-    left: 850px;
+  position: absolute;
+  left: 850px;
+}
+
+.email-2{
+    display: flex;
+    justify-content: center;
+    /* flex-direction: column; */
+    align-items: center;
+    }
+
+.email-btn-2{
+    height: 100%;
+    width: 100px;
+    color: #fff;
+    padding: 17px 15px;
+    background-color: #e50914;
+    outline: none;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    border: none;
 }
 
 .panel {
-    padding: 0 18px;
-    background-color: #303030;
-    max-height: 0;
-    font-size: 20px;
-    letter-spacing: .1px;
-    overflow: hidden;
-    color: #fff;
-    width: 864px;
-    transition: max-height 0.2s ease-out;
+  padding: 0 18px;
+  background-color: #303030;
+  max-height: 0;
+  font-size: 20px;
+  letter-spacing: 0.1px;
+  overflow: hidden;
+  color: #fff;
+  width: 864px;
+  transition: max-height 0.2s ease-out;
 }
 
 .paragraph-2 {
-    color: #fff;
-    font-size: larger;
+  color: #fff;
+  font-size: larger;
 }
 
 .footer {
-    height: 100%;
-    padding-left: 30px;
-    display: flex;
-    flex-direction: column;
-    background-color: #000;
-    border-bottom: 10px solid rgb(98, 92, 92);
+  height: 100%;
+  padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  background-color: #000;
+  border-bottom: 10px solid rgb(98, 92, 92);
 }
 
 .contact-no {
-    color: #737373;
-    font-size: larger;
+  color: #737373;
+  font-size: larger;
 }
 
 .footer-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .footer-list {
-    list-style: none;
-    font-size: small;
+  list-style: none;
+  font-size: small;
 }
 
 .footer-list-link {
-    text-decoration: none;
-    color: #737373;
+  text-decoration: none;
+  color: #737373;
 }
 
 .list-item {
-    padding-right: 12px;
-    margin-bottom: 16px;
+  padding-right: 12px;
+  margin-bottom: 16px;
 }
 
 .footer-bottom {
-    font-size: medium;
-    color: #737373;
+  font-size: medium;
+  color: #737373;
 }
